@@ -1,7 +1,8 @@
 lib_LTLIBRARIES = libportage.la
 
-libportage_la_SOURCES = liblpatom.c liblputil.c liblpxpak.c
+libportage_la_SOURCES = liblpatom.c liblputil.c liblpxpak.c liblparchives.c
 libportage_la_LIBADD = ../replace/libreplace.la
+libportage_la_LDFLAGS = -larchive
 
 AM_CPPFLAGS = -I$(top_srcdir)/include
 METASOURCES = AUTO
